stop watch and prototype dt 5-april-2019

--- a/index.html
+++ b/index.html
@@ -7,24 +7,14 @@
     <title>Document</title>
 </head>
 <body>
+   <!-- STOP WATCH -->
+    <!-- <div id ='stopwatch'></div>
+   <button onclick="startTimer()">start</button>
+   <button onclick="stopTimer()">stop</button>
+   <button onclick="clearTimer()">Reset</button> -->
 
-<!-- Name <input type="text" name="Name" id="stName"> </br>
-        RollNo<input type="text" name="Roll Number" id="stRollNo"></br>
-        Class<input type="text" name="Class" id="stClass"></br>
-        <input type="submit" name="submit" onclick="getValues()"> -->
+   
+<script src="app.js"></script>
 
-<!-- 
-        Name <input type="text" name="Name" id="stName"> </br>
-        RollNo<input type="text" name="Roll Number" id="stRollNo"></br>
-        Class<input type="text" name="Class" id="stClass"></br>
-        <input type="submit" name="submit" onclick="getValues()"> -->
-
-
-
-        
-
-
- <script src="app.js">
-    </script>   
 </body>
 </html>
