--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
 </head>
 <body>
-   <!-- STOP WATCH -->
-    <!-- <div id ='stopwatch'></div>
-   <button onclick="startTimer()">start</button>
-   <button onclick="stopTimer()">stop</button>
-   <button onclick="clearTimer()">Reset</button> -->
+  <h1>welcome our services</h1>
 
-   
-<script src="app.js"></script>
+  <a href="./about/about.html">about us</a>
+  <a href="./services/ourservices.html">our services</a>
+ 
 
+
+
+  <script src="app.js"></script>
 </body>
 </html>
