--- a/index.html
+++ b/index.html
@@ -1,20 +1,50 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 </head>
 <body>
-  <h1>welcome our services</h1>
-
-  <a href="./about/about.html">about us</a>
-  <a href="./services/ourservices.html">our services</a>
  
+    <!-- Name <input type="text" name="Name" id="stName"> </br>
+    RollNo<input type="number" name="Roll Number" id="stRollNo"></br>
+    Fees Paid <input type="number" name="Class" id="stClass"></br>
+    <input type="submit" name="submit" onclick="getValues()"> -->
+
+    <!-- <form onSubmit="return checkForLastName();">
+        Please enter your last name.<br>
+        <input type="text" id="lastNameField">
+        <input type="submit" value="Submit Form">
+        </form> -->
+
+<!-- <div id = errE1>
+        <form onSubmit="return checkForSelection();">
+            <select id="states">
+            <option value="" selected="selected">
+            SELECT A STATE</option>
+            <option value="AL">Alabama</option>
+            <option value="AK">Alaska</option>
+            <option value="AZ">Arizona</option>
+            <option value="AR">Arkansas</option>
+            </select>&nbsp;&nbsp;
+            <input type="submit" value="Submit Form">
+            </form>
+
+        </div> -->
+       
+       <!-- <div id = errE1>
+        <form onSubmit="return validateRadios();">
+        <input type="radio" name="r1" value="cat"> Cat<br>
+        <input type="radio" name="r1" value="bat"> Bat<br>
+        <input type="radio" name="r1" value="hat"> Hat<br>
+        <input type="submit" value="Submit Form">
+        </form>
+    </div> -->
+
+    <button onclick="greetWorld()">click</button>
 
 
-
-  <script src="app.js"></script>
-</body>
-</html>
+    <script src="app.js"></script></body>
+    <h1></h1>
+    </html>
