--- a/indexfb.html
+++ b/indexfb.html
@@ -39,12 +39,18 @@
 <body>
 
 
-
+<!-- 
     Email: <input type="email" name="email" id="email"></br>
     Password <input type="password" name="password" id="password">
 
-    <button onclick="createUser()">Signup</button>
+    <button onclick="createUser()">Signup</button> -->
 
+
+    Email: <input type="email" name="email" id="email"></br>
+    Password <input type="password" name="password" id="password">
+    dob <input type="date" name="dod" id="dob">
+    phone <input type="number" name="phone" id="phone">
+    <button onclick="createUser()">Signup</button> -->
 
 
 
